fixed some HTML classes and started working on mobile first CSS

--- a/style.scss
+++ b/style.scss
@@ -1,1 +1,34 @@
 //MOBILE FIRST!!!! 
+* {
+    padding: 0px;
+    margin: 0px;
+    border-style: border-box;
+}
+
+
+$primarycolor: #F5B8B8;
+
+@media screen and (max-width: 768px) {
+
+.game__background {
+
+    background-color: $primarycolor;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
+
+
+}
+
+//WIDER THAN MOBILE
+
+
+@media screen and (min-width:769px) {
+    .game__background {
+
+        background-color: $primarycolor;
+    }
+}
